--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@
 html, body {
     min-height: 100%;
     background-color: darkgray;
+    font-family: var(--font1);
 }
 
 header {
@@ -33,14 +34,12 @@ header {
 header > h1 {
     padding-top: 50px;
     font-variant: small-caps;
-    font-family: var(--font3);
-    font-size: 3em;
-    font-size: 10vh;
+    font-family: var(--font2);
+    font-size: 10vw;
 }
 
 header > p {
-    padding-bottom: 30px;
-    display: block;
+    padding-bottom: 50px;
 }
 
 a {
