--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 
 :root {
     --font1:  Verdana, Geneva, Tahoma, sans-serif;
-    --font2: 'Pasione One', cursive;
+    --font2: 'Pasione One', sans-serif;
     --font3: 'Sriracha', cursive; 
 }
 
@@ -34,7 +34,7 @@ header {
 header > h1 {
     padding-top: 50px;
     font-variant: small-caps;
-    font-family: var(--font3);
+    font-family: var(--font2);
     font-size: 10vw;
 }
 
